/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Root project — no Java sources of its own.
// All source code lives in the :mejn and :javafx-mejn subprojects.
// See also https://docs.gradle.org/current/userguide/getting_started.html
plugins {
    id 'org.openjfx.javafxplugin' version '0.1.0' apply false
    id 'eclipse'
    id 'idea'
}

def junitVersion = '6.0.3'

allprojects {
    group = 'com.rttnghs'
    version = '2.2.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

// ── Root-level convenience tasks ─────────────────────────────────────────────
// Delegate common tasks to the JavaFX UI subproject so `./gradlew run` and
// `./gradlew installDist` work from the project root without specifying a path.
tasks.register('run') {
    dependsOn ':javafx-mejn:run'
}

tasks.register('installDist') {
    dependsOn ':javafx-mejn:installDist'
}

tasks.register('assembleDist') {
    dependsOn ':javafx-mejn:assembleDist'
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_25
    }

    dependencies {
        testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
        testImplementation "org.junit.platform:junit-platform-suite:${junitVersion}"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junitVersion}"
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs += ["-Xlint:-processing"]
    }
}
